# TheAnimeScripter

./: .gitignore  .gitmodules  .graphifyignore  BENCHMARKS.MD  BUILD.md  CHANGELOG.MD  CLAUDE.md  JsonToMarkdown.py  PARAMETERS.MD  README.md  README.txt  THIRD_PARTY_NOTICES.md  TheAnimeScripter.jsx  benchmark.py  benchmark.spec  build-linux-lite.py  build-linux.py  build-lite.py  build.py  deprecated-requirements.txt  download_models.py  extra-requirements-linux-lite.txt  extra-requirements-linux.txt  extra-requirements-macos-lite.txt  extra-requirements-macos.txt  extra-requirements-windows-lite.txt  extra-requirements-windows.txt  flaskServer.py  get_ffmpeg.bat  gui.py  gui.spec  gui2.py  import torch.py  inference.py  install.ps1  jsconfig.json  log.txt  main.py  main.spec  mt_attempt.py  (+19 more)
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Build-All-Platforms.yaml  Build-Windows.yaml  Build-macOS.yaml  CI&Lint.yaml  Test-Compression-Methods.yaml  Test-Extraxt-Version.yaml  Test-Linux-Build.yaml  Test-Lite-Builds.yaml  Test-Windows-Build-Old.yaml  build-linux.yaml  build.yaml  build2.yaml  codeflash.yaml  codeql.yml  dependabot.yml  lint.yaml  lint.yml  manual.yml  old-build-windows.yaml  prune-releases.yml  static.yml  test.yaml  tests.yaml
CEP/: cep.config.ts  package-lock.json  package.json
CEP/com.psc.TheAnimeScripter/: PyShiftCore.pyi  entry.py  manifest.py  requirements.txt
benchmarks/: benchmark.py  download_sample.py  requirements.txt
benchmarks/perf/: hotloop_microbench.py  test_benchmark_rife46.py  test_benchmark_superultracompact.py
docs/: index.html  script.js  styles.css
docs/assets/: demo.avif  demo_2x.avif
input/: file_example_WEBM_1920_3_7MB.webm
scripts/: export_dfine_onnx.py
src/: RefreshEnv.cmd  TheAnimeScripter.jsx  argumentsChecker.py  attempt.py  checkSpecs.py  cleanup.py  coloredPrints.py  consent.py  constants.py  darken.py  depth_guided_rife.py  downloadModels.py  download_models.py  encode_settings.py  fastlinedarken.py  ffmpegSettings.py  generateOutput.py  getFFMPEG.py  getVideoMetadata.py  get_ffmpeg.bat  get_ffmpeg.py  initializeModels.py  linedarken.py  main_work_in_progeress.jsx  masking.py  motionBlur.py  mt_attempt.py  presetLogic.py  previewSettings.py  rifeDirectML.py  scenechange.py  script.jsx  spandrelCompat.py  trim_input.py  uiLogic.py  unifiedDenoise.py  unifiedInterpolate.py  unifiedRestore.py  unifiedUpscale.py  unifiedUpscaleNCNN.py  (+2 more)
src/assets/: guiPresets.py
src/autoclip/: autoclip.py  autoclipMaxxvit.py  autoclipTransnetv2.py  neluxStream.py  transnetv2_arch.py
src/chain/: IFNet_HDv3.py  chain.py  cugan.py  dedup.py  new_ui_in_work.jsx  rife.py
src/cli/: config.py  parser.py  sources.py  startup.py  validation.py  validator.py
src/compact/: compact.py
src/cugan/: cugan.py  newcugan.py  newcugan_test.py
src/dedup/: dedup.py  ssim.py  ssimcpu.py
src/depth/: attr_dict.py  blocks.py  blocks_v1.py  blocks_v2.py  depth.py  depthTensorRT.py  dinov2.py  dinov2_v3.py  dpt.py  dpt_temporal.py  dpt_v1.py  dpt_v2.py  fold_layerscale.py  og_dpt_v2.py  og_dpt_v3.py  transform.py  video_depth_anything.py  video_depth_utils.py
src/dpir/: dpir.py
src/esrgan/: esrgan.py
src/extraArches/: AnimeSR.py  AnimeSR_License.MD  AnimeSR_Notes.MD  RTMoSR.py  cas.py  deepdeband.py  fastlinedarken.py  figsr.py  gaterv3.py  linethinner.py  upcunet_v3.py
src/factories/: dedup.py  interpolate.py  restore.py  sceneChange.py  standalone.py  upscale.py
src/flow/: flow.py
src/gmfss/: gmfss.py  gmfss_fortuna_union.py
src/infra/: backendFallback.py  checkSpecs.py  dependencyHandler.py  getFFMPEG.py  isCudaInit.py  logAndPrint.py  progressBarLogic.py  providerCheck.py
src/interpolate/: __init__.py  _padding.py  _shared.py  _timesteps.py  distildrba.py  rife.py  rife_directml.py  rife_ncnn.py  rife_tensorrt.py
src/io/: encodingSettings.py  ffmpegSettings.py  frameWindow.py  getVideoMetadata.py  inputNormalization.py  inputOutputHandler.py
src/midas/: depth.py
src/model/: download.py  downloadModels.py  modelOptimizer.py  modelProtocol.py  registry.py  trtHandler.py
src/motionblur/: motionblur.py
src/multipassdedup/: IFNet_HDv3.py  drm.py  gmfss.py  gmfss_union.py  rife.py  vfi.py
src/objectDetection/: dfine.py  objectDetection.py  yolov9_mit.py
src/omnisr/: omnisr.py  omnisr_arch.py
src/pervfiarches/: pipeline.py
src/realesrgan/: arch_util.py  realesrgan.py  rrdbnet_arch.py
src/rife/: IFNet_HDv3.py  IFNet_HDv3.py~  IFNet_HDv3_v4_11.py  RIFE_HDv3.py  download_rife_models.py  refine.py  rife.py  rife_arch.py  rifepy_mt.py  warplayer.py
src/rifearches/: DistilDRBA_directml.py  IFNET_rife422.py  IFNET_rife422lite.py  IFNet_distildrba.py  IFNet_distildrba_tensorrt.py  IFNet_elexor_cuda.py  IFNet_elexor_tensorrt.py  IFNet_rife414.py  IFNet_rife415.py  (+36 more)
tests/: testEncoders.py  test_argumentsChecker.py  test_batchFailure.py  test_build.py  test_build_refactor.py  test_c5_deadlock_repro.py  test_checkSpecs.py  test_cli_exit_and_preset_precedence.py  test_dedup.py  test_dependencyHandler.py  test_depth_mps.py  test_depth_normalizer.py  test_downloadModels.py  test_downloadModels_macos.py  test_dynamicScale.py  test_encodingSettings.py  test_ffmpegColorspace.py  test_ffmpeg_writer.py  test_frameWindow.py  test_getFFMPEG.py  test_import_safety.py  test_input_normalization.py  test_input_output_handler.py  test_motionBlurWeights.py  test_nvdecCompat.py  test_objectDetectionDFine.py  test_object_detection_fastpaths.py  test_presetLogic.py  test_preview.py  test_preview_drain.py  test_providerCheck.py  test_registryDrift.py  test_rifePadding.py  test_rife_mps.py  test_sceneChange.py  test_spandrel_extra_archs.py  test_tensorrt_static_retry.py  test_upscalePadding.py  tests.py
theanimescripter/: __main__.py  app.py  argumentsChecker.py  coloredPrints.py  initializeModels.py  updateScript.py
theanimescripter.dist-info/: WHEEL
tools/: __init__.py  depth_mps_batch_check.py  onnxConverter.py
web/: gui3.py  main.css  main.html  main.js
workflows/: build.yaml
(+470 files in other folders)
