[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "theanimescripter"
version = "2.6.0"
description = "AI-powered video enhancement toolkit for anime and general video workflows."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "setuptools==81.0.0",
    "wheel-stub==0.5.0",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "psutil==7.2.2",
    "inquirer==3.4.1",
    "colored==2.3.2",
    "barflow==0.2.1",
    "flask-socketio==5.6.1",
    "nelux==0.8.9; platform_system == 'Windows'",
]

[project.optional-dependencies]
runtime-windows-cuda = [
    "torch==2.11.0+cu130; platform_system == 'Windows'",
    "torchvision==0.26.0+cu130; platform_system == 'Windows'",
    "tensorrt==10.16.1.11; platform_system == 'Windows'",
    "opencv-python-headless==4.13.0.92; platform_system == 'Windows'",
    "timm==1.0.26; platform_system == 'Windows'",
    "einops==0.8.2; platform_system == 'Windows'",
    "triton-windows==3.6.0.post26; platform_system == 'Windows'",
    "safetensors==0.7.0; platform_system == 'Windows'",
    "scenedetect[opencv]; platform_system == 'Windows'",
    "yt-dlp==2026.3.17; platform_system == 'Windows'",
    "onnx==1.21.0; platform_system == 'Windows'",
    "openvino==2026.1.0; platform_system == 'Windows'",
    "onnxscript==0.6.2; platform_system == 'Windows'",
    "vmaf-torch==1.1.0; platform_system == 'Windows'",
    "onnxruntime-openvino @ https://github.com/NevermindNilas/TAS-Models-Host/releases/download/main/onnxruntime_openvino-1.23.2-cp313-cp313-win_amd64.whl ; platform_system == 'Windows'",
]
runtime-windows-lite = [
    "torch==2.11.0; platform_system == 'Windows'",
    "torchvision==0.26.0; platform_system == 'Windows'",
    "opencv-python-headless==4.13.0.92; platform_system == 'Windows'",
    "timm==1.0.26; platform_system == 'Windows'",
    "einops==0.8.2; platform_system == 'Windows'",
    "scenedetect[opencv]; platform_system == 'Windows'",
    "yt-dlp==2026.3.17; platform_system == 'Windows'",
    "onnx==1.21.0; platform_system == 'Windows'",
    "openvino==2026.1.0; platform_system == 'Windows'",
    "onnxscript==0.6.2; platform_system == 'Windows'",
    "vmaf-torch==1.1.0; platform_system == 'Windows'",
    "onnxruntime-openvino @ https://github.com/NevermindNilas/TAS-Models-Host/releases/download/main/onnxruntime_openvino-1.23.2-cp313-cp313-win_amd64.whl ; platform_system == 'Windows'",
]
runtime-linux-cuda = [
    "torch==2.11.0+cu130; platform_system == 'Linux'",
    "torchvision==0.26.0+cu130; platform_system == 'Linux'",
    "tensorrt==10.16.1.11; platform_system == 'Linux'",
    "opencv-python-headless==4.13.0.92; platform_system == 'Linux'",
    "timm==1.0.26; platform_system == 'Linux'",
    "onnx==1.20.0; platform_system == 'Linux'",
    "safetensors==0.7.0; platform_system == 'Linux'",
    "scenedetect[opencv]; platform_system == 'Linux'",
    "yt-dlp==2026.3.17; platform_system == 'Linux'",
    "vmaf-torch; platform_system == 'Linux'",
    "torchcodec==0.11.0; platform_system == 'Linux'",
]
runtime-linux-lite = [
    "torch==2.11.0; platform_system == 'Linux'",
    "torchvision==0.26.0; platform_system == 'Linux'",
    "opencv-python-headless==4.13.0.92; platform_system == 'Linux'",
    "timm==1.0.26; platform_system == 'Linux'",
    "onnx==1.20.0; platform_system == 'Linux'",
    "onnxruntime==1.24.4; platform_system == 'Linux'",
    "scenedetect[opencv]; platform_system == 'Linux'",
    "yt-dlp==2026.3.17; platform_system == 'Linux'",
    "vmaf-torch; platform_system == 'Linux'",
    "torchcodec==0.11.0; platform_system == 'Linux'",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true